# Transcriber

./: CONVENTIONS.md  Cargo.toml
rust_transcriber/: Cargo.toml
rust_transcriber/src/: config_gui.rs  config_handler.rs  hotkey_handler.rs  main.rs  main_gui.rs  openai_transcribe.rs  output_handler.rs  record_audio.rs
