[package]
name = "rust_transcriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9", features = ["tokio"] }
iced_native = "0.10"
iced_winit = "0.10"
tokio = { version = "1", features = ["full"] }
