[package]
name = "rust_transcriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
global-hotkey = "0.4.1"
winit = "0.28.6"
ctrlc = "3.2.5"
crossbeam-channel = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
cpal = "0.15.2"
hound = "3.5.0"
reqwest = { version = "0.11", features = ["multipart", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
